metadata/tests/compile_fail/metadata_bad_field_ref.stderr
error: `mint = nonexistent_field` — no field `nonexistent_field` in this accounts struct
  --> tests/compile_fail/metadata_bad_field_ref.rs:13:59
   |
13 |     #[account(metadata(program = metadata_program, mint = nonexistent_field))]
   |                                                           ^^^^^^^^^^^^^^^^^

warning: unused import: `quasar_metadata::accounts::metadata`
 --> tests/compile_fail/metadata_bad_field_ref.rs:4:5
  |
4 | use quasar_metadata::accounts::metadata;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
